welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:19: error: ':' expected but ')' found.
def isFacingTrail(follow):Boolean = {
                        ^SlugSnail:35: error: identifier expected but '}' found.
}
^